--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -21,6 +21,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest black
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: print directory
+      run: |
+        pwd
+        ls -l
     - name: Test with pytest
       run: |
         pytest
